--- a/index.html
+++ b/index.html
@@ -7,7 +7,31 @@
     <title>World Clock by Abi Strain</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select>
+        <option value="">Choose city....</option>
+        <option value="">London</option>
+        <option value="">Auckland</option>
+        <option value="">New York</option>
+      </select>
+      <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">24th March 2025</div>
+        <div class="time">09:11 AM</div>
+      </div>
+      <div class="city">
+        <h2>Sydney</h2>
+        <div class="date">24th March 2025</div>
+        <div class="time">09:11 AM</div>
+      </div>
+      <div class="city">
+        <h2>Tokyo</h2>
+        <div class="date">24th March 2025</div>
+        <div class="time">09:11 AM</div>
+      </div>
+    </div>
+
     <footer>
       Coded with 💗 by Abi Strain and open sourced on
       <a href="#" target="_blank">GitHub</a>
