styled the project with CSS

--- a/index.html
+++ b/index.html
@@ -10,30 +10,36 @@
     <div class="container">
       <h1>World Clock</h1>
       <select>
-        <option value="">Choose city....</option>
+        <option value="">Choose a city....</option>
         <option value="">London</option>
         <option value="">Auckland</option>
         <option value="">New York</option>
       </select>
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">24th March 2025</div>
-        <div class="time">09:11 AM</div>
+        <div>
+          <h2>Los Angeles</h2>
+          <div class="date">24th March 2025</div>
+        </div>
+        <div class="time">09:11 <small>AM</small></div>
       </div>
       <div class="city">
-        <h2>Sydney</h2>
-        <div class="date">24th March 2025</div>
-        <div class="time">09:11 AM</div>
+        <div>
+          <h2>Sydney</h2>
+          <div class="date">24th March 2025</div>
+        </div>
+        <div class="time">09:11 <small>AM</small></div>
       </div>
       <div class="city">
-        <h2>Tokyo</h2>
-        <div class="date">24th March 2025</div>
-        <div class="time">09:11 AM</div>
+        <div>
+          <h2>Tokyo</h2>
+          <div class="date">24th March 2025</div>
+        </div>
+        <div class="time">09:11 <small>AM</small></div>
       </div>
     </div>
 
     <footer>
-      Coded with 💗 by Abi Strain and open sourced on
+      Coded with 💗 by <strong>Abi Strain</strong> and open sourced on
       <a href="#" target="_blank">GitHub</a>
     </footer>
     <script src="src/index.js"></script>
