--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.47/moment-timezone-with-data-1970-2030.min.js"
+      ;
+    ></script>
     <title>World Clock by Abi Strain</title>
   </head>
   <body>
@@ -15,26 +20,26 @@
         <option value="">Auckland</option>
         <option value="">New York</option>
       </select>
-      <div class="city">
+      <div class="city" id="los-angeles">
         <div>
           <h2>Los Angeles</h2>
-          <div class="date">24th March 2025</div>
+          <div class="date"></div>
         </div>
-        <div class="time">09:11 <small>AM</small></div>
+        <div class="time"></div>
       </div>
-      <div class="city">
+      <div class="city" id="sydney">
         <div>
           <h2>Sydney</h2>
-          <div class="date">24th March 2025</div>
+          <div class="date"></div>
         </div>
-        <div class="time">09:11 <small>AM</small></div>
+        <div class="time"></div>
       </div>
-      <div class="city">
+      <div class="city" id="tokyo">
         <div>
           <h2>Tokyo</h2>
-          <div class="date">24th March 2025</div>
+          <div class="date"></div>
         </div>
-        <div class="time">09:11 <small>AM</small></div>
+        <div class="time"></div>
       </div>
     </div>
 
