--- a/index.html
+++ b/index.html
@@ -13,32 +13,32 @@
   </head>
   <body>
     <div class="container">
-      <h1>World Clock</h1>
+      <h1>World Clock 🕰️</h1>
       <select id="city">
         <option value="">Choose a city....</option>
         <option value="current">My Current Location</option>
-        <option value="Europe/London">London</option>
-        <option value="Pacific/Auckland">Auckland</option>
-        <option value="America/New_York">New York</option>
+        <option value="Europe/London">London 🎡</option>
+        <option value="Pacific/Auckland">Auckland 🥝</option>
+        <option value="America/New_York">New York 🗽</option>
       </select>
       <div id="cities">
         <div class="city" id="los-angeles">
           <div>
-            <h2>Los Angeles</h2>
+            <h2>Los Angeles 🍔</h2>
             <div class="date"></div>
           </div>
           <div class="time"></div>
         </div>
         <div class="city" id="sydney">
           <div>
-            <h2>Sydney</h2>
+            <h2>Sydney 🐨</h2>
             <div class="date"></div>
           </div>
           <div class="time"></div>
         </div>
         <div class="city" id="tokyo">
           <div>
-            <h2>Tokyo</h2>
+            <h2>Tokyo 🍣</h2>
             <div class="date"></div>
           </div>
           <div class="time"></div>
