Added a link to GitHub repository

--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
 
     <footer>
       Coded with 💗 by <strong>Abi Strain</strong> and open sourced on
-      <a href="#" target="_blank">GitHub</a>
+      <a
+        href="https://github.com/AbiRodStr/world-clock-by-Abi-Strain"
+        target="_blank"
+        >GitHub</a
+      >
     </footer>
     <script src="src/index.js"></script>
   </body>
